--- a/core/res/res/values-fr/dk_strings.xml
+++ b/core/res/res/values-fr/dk_strings.xml
@@ -49,4 +49,19 @@
 
     <!-- SlimSeekBarPreference -->
     <string name="default_string">Default</string> <!-- Needs translation -->
+
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_security">Security</string> <!-- Needs translation -->
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_security">Permissions related to device security information.</string> <!-- Needs translation -->
+
+    <!-- [CHAR LIMIT=NONE] Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_readPhoneBlacklist">read phone blacklist</string> <!-- Needs translation -->
+    <!-- [CHAR LIMIT=NONE] Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_readPhoneBlacklist">Allows an app to read information about phone numbers that are blocked for incoming calls or messages.</string> <!-- Needs translation -->
+
+    <!-- [CHAR LIMIT=NONE] Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_changePhoneBlacklist">change phone blacklist</string> <!-- Needs translation -->
+    <!-- [CHAR LIMIT=NONE] Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_changePhoneBlacklist">Allows an app to change the phone numbers that are blocked for incoming calls or messages.</string> <!-- Needs translation -->
 </resources>
